# trains-os

./: .gitignore  Makefile  README.md  common.mk  linker.ld  scripts.sh
common/: Makefile  assert.h  dashboard.h  hashtable.h  math.c  math.h  printf_adaper.h  printf_adapter.c  ring_buffer.h  timer.c  timer.h
doc/: mem.md  msgbox_1.md
kernel/: Makefile
kernel/include/: bootstrap.h  context_macro.S  debug_print.h  encoder.h  global_state.h  hashtable.h  interrupt.h  loop.h  mailbox.h  mmu.h  pgmgr.h  pgmgr_init.h  scheduler.h  slab_kernel.h  stack.h  sys_const.h  sys_val.h  task.h  util.h
kernel/src/: boot.S  bootstrap.c  context_switch.S  encoder.c  exception.S  global_state.c  interrupt.c  loop.c  main.c  mmu.c  pgmgr.c  scheduler.c  slab_kernel.c  stack.c  sys_val.c  syscall.c  syscall_handler.c  task.c  util.c
lib/: Makefile
lib/base/: util.c
lib/include/: hashtable.h  heap.h  libfdt.h  libfdt_env.h  load_elf.h  macro.h  rbtree.h  rbtree_priv.h  rpi.h  slab.h  sys_const.h  uapi.h  util.h  utlist.h
lib/libbase/: printf.c  printf_adapter.c  rpi.c  rpi_dma.c  rpi_gpio.c  rpi_uart.c  util.c
lib/libfdt/: README.md  fdt_addresses.c  fdt_overlay.c
lib/librbtree/: rbtree.c
loader/: Makefile  test.c
msg/: msg.h
pie-c/: Makefile
pie-rust/: .gitignore  Cargo.toml  Makefile  build.rs  make_all.sh  make_clean.sh  rpi4b.json
pie-rust-old/user_entry/: Cargo.toml  build.rs
pie-rust-old/user_entry/src/: main.rs
pie-rust/.cargo/: config
pie-rust/src/: lib.rs
pie-rust/src/api/: clock.rs  encoder.rs  gatt.rs  imu.rs  mod.rs  motor.rs  name_server.rs  pid.rs  rpi_bluetooth.rs  rpi_uart.rs
pie-rust/src/sys/: bog.rs  entry_args.rs  gatt.rs  helper.rs  libm.rs  log.rs  mod.rs  msgbox.rs  print_raw.rs  rpi.rs  syscall.rs  types.rs
pie-rust/user_entry/: Makefile  rpi4b.json
pie-rust/user_entry/.cargo/: config
pie-rust/user_entry/src/: main.rs
user/: Makefile  user_entry.h
(+40 files in other folders)
