[package]
name = "rust-pie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msgbox_macro = { path = "deps/msgbox_macro" }
heapless = "0.8.0"
# ahash = { version = "0.8.11", default-features = false }
fnv = { version = "1.0.7", default-features = false }
volatile-register = "0.2.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
libm = "0.2.8"

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 3
