[package]
name = "user_entry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins" }

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 0
debug = false
